# datacenter_blaster

./: .gitignore  compose.yaml  pyproject.toml  test_main.http
docker-data/mysql-init/: A000-init-tables.sql
src/: main.py
src/fake/: datacenter.py
src/model/: __init__.py  datacenter.py
src/schema/: cidr.py  datacenter.py  ipaddress.py
src/schema/base/: record_base.py
src/system/: __init__.py  constants.py  db_connect.py  decorators.py  jinja.py  logger.py  logger_conf.py
src/templates/: base.html  datacenter-list.html  datacenter-list_backup.html  datacenter_data_table.html  index.html  tailwind_datatable.html
src/templates/partials/: datacenter_list.html  datacenter_view.html
src/web/: datacenter.py
tailwindcss/: package.json  tailwind.config.js
