[project]
name = "datacenter-blaster"
version = "0.1.0"
authors = [
  {name = "Cornelius Franken"}]
readme = "README.md"
dependencies = [
    "fastapi==0.112.0",
    "uvicorn== 0.30.1",
    "ruff == 0.5.6",
    "python-json-logger == 2.0.7",
    "mysql-connector-python == 9.0.0",
    "mysql == 0.0.3",
    "databases == 0.9.0",
    "sqlalchemy == 2.0.31",
    "pymysql==1.1.1",
    "sqlacodegen==3.0.0rc5",
    "fasthx==1.1.1",
    "jinja2==3.1.4"

]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"




